# cmake-tmpl

./: CMakeLists.txt  config.h.in  hello.cpp  test.xml
